--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^19.1.0",
+    "@angular/cdk": "^19.0.0",
     "@angular/common": "^19.1.0",
     "@angular/compiler": "^19.1.0",
     "@angular/core": "^19.1.0",
@@ -25,6 +26,7 @@
     "@types/jquery": "^3.5.32",
     "angular-datatables": "^19.0.0",
     "bootstrap": "^5.3.3",
+    "chart.js": "^4.4.9",
     "datatables.net": "^2.2.2",
     "datatables.net-bs5": "^2.2.2",
     "datatables.net-buttons": "^3.2.2",
@@ -32,6 +34,7 @@
     "datatables.net-dt": "^2.2.2",
     "jquery": "^3.7.1",
     "leaflet": "^1.9.4",
+    "ng2-charts": "^8.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
